--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -15,17 +15,49 @@
       <ion-radio-group>
         <ion-item>
           <ion-label>
+            I want to BUY it
           </ion-label>
-          <ion-radio>
-            
+          <ion-radio value="CLIENT" slot="start">
           </ion-radio>
-
         </ion-item>
-
         <ion-item>
-
+          <ion-label>
+            I want to SELL it
+          </ion-label>
+          <ion-radio value="PARTNER" slot="start">
+          </ion-radio>
         </ion-item>
       </ion-radio-group>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>
+       Contact
+      </ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-label position="floating">Name</ion-label>
+        <ion-input type="text"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input type="email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Password</ion-label>
+        <ion-input type="password"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Confirm Password</ion-label>
+        <ion-input type="password"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Phone Number</ion-label>
+        <ion-input type="number"></ion-input>
+      </ion-item>
     </ion-card-content>
   </ion-card>
 </ion-content>
